--- a/res/xml/preference_headers.xml
+++ b/res/xml/preference_headers.xml
@@ -61,4 +61,13 @@
         android:title="@string/toggles_title"
         android:icon="@drawable/ic_carbon_quicksettings" />
 
+   <header
+        android:title="@string/system" />
+
+   <header
+        android:id="@+id/device_tools"
+        android:fragment="com.carbon.settings.device.DeviceTools"
+        android:title="@string/device_tools_title"
+        android:icon="@drawable/ic_carbon_device" />
+
 </preference-headers>
